google Map integrated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   currency_picker: ^2.0.21
   geolocator: ^14.0.2
   geocoding: ^4.0.0
+  google_maps_flutter: ^2.12.3
 
 dev_dependencies:
   flutter_test:
